--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -15,10 +15,6 @@
         android:id="@+id/item3"
         android:title="Item3"
         />
-    
-    <item
-        android:id="@+id/nigga"
-        android:title="Item4"
-        />
-        
+    <item android:id="@+id/item4"
+        android:title="Item4"></item>        
 </menu>
